[tool.poetry]
name = "jane-street-real-time-market-data-forecasting"
version = "0.1.0"
description = ""
authors = ["LiDu <lidu@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"
jupyter = "^1.1.1"
scikit-learn = "^1.5.2"
sympy = "^1.13.3"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
